examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/const_tail_reconstruct.st
language core;

extend with #type-reconstruction, #lists;


fn main(n : Nat) -> auto {
  return  cons(0, [true]);
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
